Fixed image align in sitemap

--- a/css/eze.css
+++ b/css/eze.css
@@ -749,6 +749,7 @@
     padding: 0 10px;
     margin-left: -2px; }
     .eze .finder .actions .heading {
+      text-align: center;
       margin-top: 20px; }
       .eze .finder .actions .heading h2 {
         font: normal 14px/22px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
