--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -144,6 +144,7 @@
 		margin-left: -2px
 		
 		.heading
+			text-align: center
 			margin-top: 20px
 	
 			h2
